Avoid dropped control-key events by making LastModifierState global. b=463802 r=masayuki,josh sr=roc