widget/src/cocoa/nsChildView.h
@@ -173,8 +173,6 @@ enum {
   // re-establish the connection to the service manager many times per second
   // when handling |draggingUpdated:| messages.
   nsIDragService* mDragService;
-  
-  PRUint32 mLastModifierState;
 
   // For use with plugins, so that we can support IME in them.  We can't use
   // Cocoa TSM documents (those created and managed by the NSTSMInputContext
